[package]
name = "rt-easy-cli"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
parser = { path = "../rt-easy-parser", package = "rt-easy-parser" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }
compiler-backend-simulator = { path = "../rt-easy-compiler-backend-simulator", package = "rt-easy-compiler-backend-simulator" }
unit-test = { path = "../rt-easy-unit-test", package = "rt-easy-unit-test" }

structopt = "0.3.25"
anyhow = "1.0.44"
ansi_term = "0.12.1"
