[package]
name = "rt-easy-compiler-backend-simulator"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }