[package]
name = "rt-easy-compiler-backend-simulator"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
rtprogram = { path = "../rt-easy-program", package = "rt-easy-program" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }
