[package]
name = "rt-easy-compiler-backend-vhdl"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
rtvhdl = { path = "../rt-easy-vhdl", package = "rt-easy-vhdl" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }

thiserror = "1.0.30"

[dev-dependencies]
parser = { path = "../rt-easy-parser", package = "rt-easy-parser" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }
