[package]
name = "rt-easy-compiler"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
pretty-error = { path = "../lib/pretty-error" }

[dev-dependencies]
parser = { path = "../rt-easy-parser", package = "rt-easy-parser" }
