[package]
name = "rt-easy-simulator"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.66"
