[package]
name = "rt-easy-vhdl"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
memory-file = { path = "../rt-easy-memory-file", package = "rt-easy-memory-file" }

thiserror = "1.0.30"
temply = "0.2.0"
indexmap = "1.8.0"
vec1 = "1.8.0"
