[package]
name = "rt-easy"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
rtcore = { path = "../rt-easy-core", package = "rt-easy-core" }
parser = { path = "../rt-easy-parser", package = "rt-easy-parser" }
compiler = { path = "../rt-easy-compiler", package = "rt-easy-compiler" }
compiler-backend-simulator = { path = "../rt-easy-compiler-backend-simulator", package = "rt-easy-compiler-backend-simulator" }
compiler-backend-vhdl = { path = "../rt-easy-compiler-backend-vhdl", package = "rt-easy-compiler-backend-vhdl" }
simulator = { path = "../rt-easy-simulator", package = "rt-easy-simulator" }
