[package]
name = "toktok-generator-tests"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
logos = "0.12.0"
toktok = { path = "../toktok" }
serde_json = "1.0.66"

[build-dependencies]
toktok-generator = { path = "../toktok-generator" }
