[package]
name = "toktok-generator"
version = "0.1.0"
authors = ["Jannik Obermann <jannik.obermann@gmail.com>"]
edition = "2021"
rust-version = "1.56"
publish = false

[dependencies]
logos = "0.12.0"
toktok = { path = "../toktok" }
textwrap = "0.14.2"
either = "1.6.1"

[dev-dependencies]
serde_json = "1.0.66"
