[package]
name = "test-code"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
parser = { path = "../../../src/rt-easy-parser", package = "rt-easy-parser" }
compiler = { path = "../../../src/rt-easy-compiler", package = "rt-easy-compiler" }
compiler-backend-simulator = { path = "../../../src/rt-easy-compiler-backend-simulator", package = "rt-easy-compiler-backend-simulator" }
simulator = { path = "../../../src/rt-easy-simulator", package = "rt-easy-simulator" }

once_cell = "1.9.0"
regex = "1.5.4"
anyhow = "1.0.44"
